# JIProyecto

./: .env  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  GlobalUsing.cs  JIProyecto.csproj  JIProyecto.sln  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
DTOs/: EmpleadoDTO.cs
DataAccess/: EmpleadoDbContext.cs
Helpers/: FileAccessHelper.cs  SQLLiteHelper.cs
Interfaces/: IAlumnos.cs  IDialogService.cs
JIProyecto/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  GlobalUsing.cs  MainPage.xaml.cs  MauiProgram.cs  NetMAUI_Clase6_Crud_SQLLite.csproj
JIProyecto/Helpers/: FileAccessHelper.cs  SQLLiteHelper.cs
JIProyecto/Interfaces/: IAlumnos.cs  IDialogService.cs
JIProyecto/Models/: AlumnosModels.cs
JIProyecto/Services/: AlumnosServices.cs  DialogService.cs
JIProyecto/ViewModels/: AlumnoViewModels.cs  AlumnosViewModels.cs
JIProyecto/Views/: Alumno.xaml  Alumno.xaml.cs  ListadoAlumnos.xaml.cs
Modelos/: Empleado.cs
Models/: AlumnosModels.cs
Services/: AlumnosServices.cs  DialogService.cs
Utilidades/: ConexionDB.cs  EmpleadoMensaje.cs  EmpleadoMensajeria.cs
ViewModels/: AlumnoViewModels.cs  EmpleadoViewModel.cs  MainViewModel.cs
Views/: Alumno.xaml  Alumno.xaml.cs  Empleado.xaml  ListadoAlumnos.xaml  ListadoAlumnos.xaml.cs  MainPage.xaml
api/: Cargo.toml  Makefile
api/src/: main.rs  server.rs
frontend/: App.tsx  package-lock.json  package.json  vercel.json
frontend/Components/: Button.tsx  Coincard.tsx  OrderCard.tsx  compradorForm.tsx
frontend/Screens/: BuyOrder.tsx  CrearComprador.tsx  (+7 more)
insertapis/: go.mod  go.sum  main.go
(+14 files in other folders)
