[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/server.rs" 

[dependencies]
postgres = "0.19"
serde_json = "1.0"
serde_derive = "1.0"
actix-web = "4"
dotenv = "0.15.0"
tokio = "1.34.0"
tokio-postgres = "0.7.10"
actix-cors = "0.7.0"
serde = { version = "1.0.195", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.1"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
reqwest = "0.11.23"
